--- a/index.html
+++ b/index.html
@@ -69,21 +69,11 @@ http://bl.ocks.org/mbostock/3081153
 
 <div class="container">
   <div class="row">
-    <div class="col-md-6">
-      <svg class="intro-svg"></svg>
-      <svg class="small"></svg>
-      <div id="controls"></div>
+    <div class="col-md-12 text-center">
+      <a href="play.html">
+        <img src="img/logo2.png">
+      </a>
       <h1 class="brand-heading">codeslam</h1>
-      <p>geo@codeslam.io</p>
-    </div>
-
-    <div class="col-md-6">
-      <br>
-      <p>Thank you, 2016 Computer Science Crash Course!</p>
-      <center><blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Thank you Crash Course students. I now pronounce you CODESLAM Computer Science Neophytes. Go forth and automate. <a href="https://t.co/3UEir4Xw6w">pic.twitter.com/3UEir4Xw6w</a></p>&mdash; codeslam (@codeslamio) <a href="https://twitter.com/codeslamio/status/702338751209578496">February 24, 2016</a></blockquote>
-<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script></center>
-      <p>More codeslams to be announced later this summer.</p>
-
     </div>
   </div>
 </div>
@@ -183,246 +173,6 @@ footer {
     <script src="js/d3.min.js"></script>
     <script src="js/superformula.js"></script>
     <script src="js/dat.gui.js"></script>
-<script>
-
-$(document).ready(function() {
-  setTimeout(function() {
-    $(".intro-text-no").addClass("intro-text-doit")
-    $(".stuff").fadeIn()
-  },1500)
-  setTimeout(function() {
-    $("#controls").slideFadeToggle()
-  },1000)
-})
-
-
-$("[data-toggle=popover]").popover();
-//mod from http://bl.ocks.org/mbostock/3081153 and http://bl.ocks.org/mbostock/1020902
-//http://bl.ocks.org/mbostock/1021103
-//
-
-    parameters = ['m','n1','n2','n3','a','b']
-    var shape = function(s) {
-
-        parameters.forEach(function(p){
-            this["_"+p] = 10.0
-        })
-    }
-    parameters.forEach(function(p) {
-        Object.defineProperty(shape.prototype,p, {
-            get:function(){
-                prop = this["_"+p]
-                return typeof(prop) != 'undefined' ? prop : 10.0
-            },
-            set:function(x){this["_"+p] = x}
-        })
-
-    })
-
-    window.selected = null
-    window.onload = function() {
-        var s = new shape()
-        var gui = new dat.GUI({autoPlace:false, width:"100%"})
-        dat.GUI.toggleHide();
-        document.getElementById('controls').appendChild(gui.domElement)
-        parameters.forEach(function(p) {
-            var controller = gui.add(s,p).min(-10).max(20).step(0.001)
-
-            controller.onChange(function(v) {
-              //console.log(window.selected)
-                //t = d3.superformulaTypes[window.selected]
-                n = d3.superformula().size(size*50).segments(250).type(window.selected)
-                d = n.param(p,v)
-                d3.select(".big").transition().duration(0).attr("d", d)
-
-
-                    data = d3.superformulaObjects[window.selected]
-                    data[p] = v
-
-
-                d3.select("#"+window.selected).transition().duration(0).attr("d",d.size(size))
-
-
-
-
-            })
-        })
-
-       $('.close-button').hide()
-
-
-var size = window.innerHeight/3;
-var svg = d3.select(".intro-svg")
-    .attr("width", window.innerWidth/2)
-    .attr("height", size/1.5)
-    //.attr("top", 0)
-    //.attr("left",0)
-
-    var x = d3.scale.ordinal()
-        .domain(d3.superformulaTypes)
-        .rangePoints([0, 300], 1);
-
-    var big = d3.superformula()
-        .type("circle")
-        .size(size * 50)
-        .segments(250);
-
-
-svgtranslatey = size/3+25
-    var path = svg.append("path")
-        .attr("class", "big")
-.attr("transform", "translate("+size/2+","+svgtranslatey+")")
-        .attr("d", big)
-        .attr("stroke",'steelblue')
-        .attr("fill","transparent")
-        .attr("stroke-width","5px")
-
-        var small = d3.superformula()
-            .type(function(d) { return d; })
-            .size(size);
-
-hide = true
-  d3.select(".small").attr("width",300).attr("height",75).selectAll("a")
-    .data(d3.superformulaTypes)
-  .enter().append("a")
-    .attr("transform", function(d, i) { return "translate("+ x(d) + ",40)"; })
-  .append("path").attr("id", String)
-    .attr("class", "small smallo")
-    .attr("d", small)
-    .on("mousedown", function() { d3.select(this).style("fill", "aliceblue"); })
-    .on("mouseup", function() { d3.select(this).style("fill", null); })
-    .on("click", function(d) {
-      d3.select(".big").transition().duration(1000).attr("d", big.type(d))
-      parameters.forEach(function(p) {
-          data = d3.superformulaObjects[d]
-          s[p] = data[p]
-      })
-      gui.__controllers.forEach(function(g){
-          g.updateDisplay()
-      })
-      window.selected = d
-      d3.selectAll(".smallo").style("fill","steelblue")
-      d3.select("#"+window.selected).style("fill","lightsteelblue")
-
-      $("#controls").slideFadeToggle()
-
-      //console.log("clock")
-        if(hide) {
-            window.loopit=false
-
-            hide=false
-        }
-        else{
-            window.loopit=true
-            ii = d3.superformulaTypes.indexOf(window.selected)
-            loop()
-            hide=true
-        }
-
-
-    });
-
-    window.ii = d3.superformulaTypes.indexOf("circle")+1;
-    window.loopit=true
-    function loop() {
-
-        ii = window.ii
-        if(window.loopit) {
-
-          d = d3.superformulaTypes[ii]
-          d2 = d3.superformulaTypes[(ii==0)?d3.superformulaTypes.length-1:ii-1]
-          window.selected = d
-          n = d3.superformula().size(size*50).segments(250).type(d)
-
-          parameters.forEach(function(p) {
-              data = d3.superformulaObjects[d]
-              s[p] = data[p]
-          })
-
-          gui.__controllers.forEach(function(g){
-              g.updateDisplay()
-          })
-
-          d3.selectAll(".smallo").style("fill","steelblue")
-          d3.select("#"+window.selected).style("fill","lightsteelblue")
-
-          d3.select(".big").transition().delay(350).duration(1000).attr("d",n)
-          .delay(350)
-            .each("end", loop);
-            ii = (ii+1 == d3.superformulaTypes.length) ? 0 : ii+1;
-        }
-    }
-    loop()
-
-        window.onresize = function() {
-          var size = window.innerHeight/2;
-          svgtranslatey = size/3+25
-      path.attr("transform", "translate("+window.innerWidth/2+","+svgtranslatey+")")
-      var size = window.innerHeight/2;
-      var svg = d3.select(".intro-svg")
-          .attr("width", window.innerWidth)
-          .attr("height", size/1.5)
-    }
-
-
-    $.fn.slideFadeToggle  = function(speed, easing, callback) {
-            return this.animate({opacity: 'toggle', height: 'toggle'}, speed, easing, callback);
-    };
-
-        //$("#controls").hide()
-        $(".content").hide()
-
-
-
-
-
-$('.navbar-collapse ul li a').click(function() {
-    $('.navbar-toggle:visible').click();
-});
-
-var CodeSlam = function() {
-  console.log("top animation modifed from d3.js blocks\nhttp://bl.ocks.org/mbostock/1021103\nhttp://bl.ocks.org/mbostock/1020902\nhttp://bl.ocks.org/mbostock/3081153")
-  //console.log("codeslam functions", ["main", "log"])
-}
-
-CodeSlam.prototype.log = function() {
-  $(".main").fadeOut("fast", function() {
-    $(".content").html("<div class='container'><h1>.log()</h1><h3>if(codeslam.log().length === 0) {</h3><h3> return \"codeslams are coming\"</h3><h3>}</h3></div>")
-    $(".content").fadeIn()
-  })
-  return this;
-}
-
-CodeSlam.prototype.main = function(d) {
-  if (typeof(d) !== 'undefined') {
-    window.ii = d
-  }
-  else {
-    //loop()
-  }
-  $(".content").fadeOut("fast", function() {
-    $(".main").fadeIn("fast")
-  })
-  return this;
-}
-
-codeslam = new CodeSlam()
-
-$("#log").click(function() {
-  codeslam.log()
-})
-$("#main").click(function() {
-  codeslam.main();
-})
-
-
-}
-
-
-
-
-
-</script>
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
