--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ http://bl.ocks.org/mbostock/3081153
   <div class="row">
     <div class="col-md-12 text-center">
       <a href="play.html">
-        <img src="img/logo2.png">
+        <img style="max-width:100%" src="img/logo2.png">
       </a>
       <h1 class="brand-heading">codeslam</h1>
     </div>
