--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ http://bl.ocks.org/mbostock/3081153
 <div class="container">
   <div class="row">
     <div class="col-md-12 text-center">
-      <a href="play.html">
+      <a href="play">
         <img style="max-width:100%" src="img/logo2.png">
       </a>
       <h1 class="brand-heading">codeslam</h1>
