--- a/play.html
+++ b/play.html
@@ -18,6 +18,7 @@ http://bl.ocks.org/mbostock/3081153
 
     <title>codeslam</title>
     <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/monoid.css" rel="stylesheet">
     <link href="/css/grayscale.css" rel="stylesheet">
     <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
